Fix alignment issue in footer icons by changing flex alignment to center

--- a/main.css
+++ b/main.css
@@ -536,7 +536,7 @@ select {
 
 .footer--icons {
   display: flex;
-  align-items: flex-center;
+  align-items: center;
   justify-content: right;
 }
 
